--- a/2lab_NN_Al_Khmuz_BS_25.ipynb
+++ b/2lab_NN_Al_Khmuz_BS_25.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMScPEZlIK1roQUBr0lGsNL",
+      "authorship_tag": "ABX9TyO46P/Fyd03ScgTwhbC9CDu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -697,6 +697,150 @@
     {
       "cell_type": "markdown",
       "source": [
+        "##Контрольні питання"
+      ],
+      "metadata": {
+        "id": "Xq7w1IVyWg7g"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*1. Що таке градієнтний спуск і для чого він використовується?*"
+      ],
+      "metadata": {
+        "id": "ld_-zH3bWmDm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Градієнтний спуск — це оптимізаційний алгоритм, який використовується для знаходження мінімуму функції. У контексті машинного навчання він застосовується для навчання моделей, коригуючи їх параметри (ваги та зсуви) таким чином, щоб зменшити похибку, вимірювану функцією втрат. Градієнтний спуск дозволяє знаходити оптимальні значення параметрів, що покращує точність прогнозів моделі."
+      ],
+      "metadata": {
+        "id": "J1Kfw2YBYuVv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*2.Які основні складові градієнтного спуску?*\n"
+      ],
+      "metadata": {
+        "id": "Xnawhz8VWtrj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Основні складові градієнтного спуску:\n",
+        "\n",
+        "Параметри моделі: Значення, що налаштовуються (ваги, зсуви).\n",
+        "Функція втрат: Оцінює точність моделі.\n",
+        "Градієнт: Вказує напрямок зміни параметрів.\n",
+        "Швидкість навчання: Контролює розмір кроку при оновленні.\n",
+        "Ітерації: Кількість проходів через навчальні дані."
+      ],
+      "metadata": {
+        "id": "OC3ibGBPYlqf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*3. Що таке швидкість навчання в контексті градієнтного спуску? Як вона\n",
+        "впливає на процес оптимізації?*"
+      ],
+      "metadata": {
+        "id": "5BuWnvprWzZf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Швидкість навчання (learning rate) в контексті градієнтного спуску — це гіперпараметр, який визначає, на скільки зміщуються параметри моделі в напрямку градієнта під час кожного оновлення.\n",
+        "\n",
+        "Вплив на процес оптимізації:\n",
+        "\n",
+        "Висока швидкість навчання: Може призвести до швидкого сходження, але є ризик \"перескочити\" оптимальне значення або навіть вивести алгоритм з зони збіжності.\n",
+        "\n",
+        "Низька швидкість навчання: Гарантує більш точні оновлення параметрів, але процес навчання може бути повільним і вимагати більше ітерацій для досягнення оптимального рішення.\n",
+        "\n",
+        "Таким чином, правильний вибір швидкості навчання критично важливий для ефективності та стабільності алгоритму градієнтного спуску."
+      ],
+      "metadata": {
+        "id": "-K8SJi5TYbjU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*4. Як градієнтний спуск впорядковує параметри моделі?*\n"
+      ],
+      "metadata": {
+        "id": "qxJy0DNMXPKe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Градієнтний спуск впорядковує параметри моделі, обчислюючи градієнт функції втрат і оновлюючи параметри в напрямку, протилежному градієнту, щоб зменшити втрати. Цей процес повторюється, поки не буде досягнуто оптимальних значень параметрів."
+      ],
+      "metadata": {
+        "id": "iJY7EIrKYTTu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*5. Чому градієнтний спуск є одним з найпоширеніших методів оптимізації?*"
+      ],
+      "metadata": {
+        "id": "snxRW-DhXTr2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Градієнтний спуск є одним з найпоширеніших методів оптимізації, оскільки він простий у реалізації, ефективно працює з великими даними, застосовується до різних моделей машинного навчання і має можливість налаштування. Крім того, він здатний сходитися до оптимальних значень функції втрат і має багато варіацій, що дозволяє адаптувати його під конкретні задачі."
+      ],
+      "metadata": {
+        "id": "yycv8wD7YHXu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*6. Як обрати метод оптимізації для конкретної задачі?*"
+      ],
+      "metadata": {
+        "id": "pBrv3dlYXVSM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Для вибору методу оптимізації для конкретної задачі слід врахувати наступні фактори:\n",
+        "\n",
+        "Тип задачі: чи є данна задача мінімізацією чи максимізацією, а також чи є вона континуальною чи дискретною.\n",
+        "\n",
+        "Природа функції: треба проаналізувати, чи є функція гладкою, диференційованою, чи містить вона багато локальних мінімумів.\n",
+        "\n",
+        "Швидкість та ефективність: оцінити, скільки ресурсів (часу, пам'яті) потрібно для виконання алгоритму. Деякі методи, як градієнтний спуск, швидко сходяться, але можуть потрапляти в локальні мінімуми.\n",
+        "\n",
+        "Параметри задачі: визначити, чи ми можемо використовувати градієнти (методи, які їх вимагають) чи потрібно працювати без них (евристичні методи).\n",
+        "\n",
+        "Значення точності: визначити, наскільки критичною є точність результату для нашої задачі.\n"
+      ],
+      "metadata": {
+        "id": "264N70QNXnAs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "##Додаток А"
       ],
       "metadata": {
@@ -708,7 +852,7 @@
       "source": [
         "Давайте зменшимо learning rate (наприклад, замість 0.01 використаємо 0.001) і запустимо алгоритм ще раз. Це дозволить нашому графіку бути більш плавним і показати поступове зменшення помилки.\n",
         "\n",
-        "Збільшимо кількість ітерацій, якщо алгоритм зупиняється занадто швидко. Наприклад, замість 1000 зробимо 2000, і подивимося, чи змінюється поведінка графіка."
+        "Кількість ітерацій залишимо такою ж (758)"
       ],
       "metadata": {
         "id": "mdQ2DkN7RFv4"
@@ -842,9 +986,9 @@
           "height": 524
         },
         "id": "S4FGFkZ2SZvJ",
-        "outputId": "7d7bff4e-3bf8-4e21-de7d-e96e43661b8a"
+        "outputId": "256e1e97-5cd3-46cf-de8b-1c0169e1650e"
       },
-      "execution_count": 47,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "display_data",
